# lets_ride/models/__init__.py
@@ -1,9 +1,11 @@
+from lets_ride.models.asset_transport_request import AssetTransportRequest
 from lets_ride.models.ride_request import RideRequest
 from lets_ride.models.share_ride import ShareRide
 
 __all__ = [
     "RideRequest",
-    "ShareRide"
+    "ShareRide",
+    "AssetTransportRequest"
 ]
 
 # class DummyModel(AbstractDateTimeModel):
